--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,6 @@
 }
 
 :root {
-  --color-primary: #191d2b;
   --color-secondary: #27AE60;
   --color-white: #FFFFFF;
   --color-black: #000;
@@ -22,7 +21,6 @@
 }
 
 body {
-  background-color: var(--color-primary);
   font-family: "Poppins", sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
@@ -570,4 +568,113 @@ section {
 }
 .blogs .blog p {
   font-size: 0.9rem;
+}
+
+.contact-content-con {
+  display: flex;
+  padding-top: 3.5rem;
+}
+.contact-content-con .left-con {
+  flex: 2;
+}
+.contact-content-con .left-con h4 {
+  margin-top: 1rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.contact-content-con .left-con p {
+  margin: 1rem 0;
+  line-height: 2rem;
+}
+.contact-content-con .left-con .contact-info .contact-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contact-content-con .left-con .contact-info .contact-item p {
+  margin: 0.3rem 0 !important;
+  padding: 0 !important;
+}
+.contact-content-con .left-con .contact-info .contact-item .icon {
+  display: grid;
+  grid-template-columns: 30px 1fr;
+}
+.contact-content-con .left-con .contact-info .contact-item .icon i {
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+}
+.contact-content-con .left-con .contact-icon {
+  display: flex;
+  margin-top: 2rem;
+}
+.contact-content-con .left-con .contact-icon a {
+  display: flex;
+  align-items: center;
+  color: var(--color-white);
+  background-color: var(--color-grey-5);
+  cursor: pointer;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 0 0.4rem;
+  transition: all 0.4s ease-in-out;
+}
+.contact-content-con .left-con .contact-icon a:hover {
+  background-color: var(--color-secondary);
+}
+.contact-content-con .left-con .contact-icon a:hover i {
+  color: var(--color-primary);
+}
+.contact-content-con .left-con .contact-icon a i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+}
+.contact-content-con .right-con {
+  flex: 3;
+  margin-left: 3rem;
+}
+.contact-content-con .right-con .input-control {
+  margin: 1.5rem 0;
+}
+.contact-content-con .right-con .input-control input, .contact-content-con .right-con .input-control textarea {
+  border-radius: 30px;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  padding: 0.8rem 1.1rem;
+  outline: none;
+  border: none;
+  width: 100%;
+  background-color: var(--color-grey-5);
+  color: white;
+  resize: none;
+}
+.contact-content-con .right-con .inc {
+  display: flex;
+}
+.contact-content-con .right-con .inc :last-child {
+  margin-left: 1.5rem;
+}
+.contact-content-con .right-con .btnss {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.contact-content-con .right-con .submit-btn {
+  display: flex;
+  align-content: flex-start;
+}
+.contact-content-con .right-con button {
+  background-color: var(--color-secondary);
+  font-weight: 600;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.contact-content-con .right-con button:hover {
+  background-color: var(--color-grey-5);
 }/*# sourceMappingURL=style.css.map */
